--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       --card:#111827;
       --muted:#9ca3af;
       --text:#e5e7eb;
-      --accent:#60a5fa;
       --line:#1f2937;
       --soft:#0b1220;
       --warn:#f87171;
@@ -98,10 +97,6 @@
     th{font-size:12px;color:#cbd5e1;text-align:left;background:rgba(11,18,32,.35)}
     td{font-size:13px}
     .right{text-align:right}
-    @media (max-width:420px){
-      th, td{padding:8px 8px;font-size:12px}
-      th{font-size:11px}
-    }
 
     .kpis{display:grid;gap:10px}
     .kpi{padding:12px;border:1px solid var(--line);border-radius:14px;background:rgba(11,18,32,.55)}
@@ -166,18 +161,25 @@
     .muted{color:var(--muted)}
     .footNote{margin-top:10px;font-size:11px;color:var(--muted);line-height:1.45;}
 
-    /* ✅ PDF 캡처 전용(화면에는 안 보임) */
+    /* ✅ PDF 캡처 전용(화면에는 안 보임)
+       - A4 여백 30mm: 좌우상하 모두 30mm
+       - A4: 794px 폭 기준에서 30mm≈113px (96dpi 가정)
+         실제 출력은 jsPDF A4에 맞춰 스케일링되므로 "여백 느낌"을 안정적으로 주기 위해 내부 padding으로 구현
+    */
     #pdfCaptureRoot{
       position:fixed;
       left:-99999px; top:0;
       width:794px;
       background:#ffffff;
-      color:#111827;
-      padding:24px;
-      border-radius:0;
+      color:#000;
+      padding:113px; /* 30mm 느낌 */
       z-index:-1;
+      font-family: "Malgun Gothic","맑은 고딕","Apple SD Gothic Neo","Noto Sans KR",sans-serif;
     }
-    #pdfCaptureRoot *{box-sizing:border-box}
+    #pdfCaptureRoot *{
+      box-sizing:border-box;
+      font-family: "Malgun Gothic","맑은 고딕","Apple SD Gothic Neo","Noto Sans KR",sans-serif;
+    }
   </style>
 
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js" crossorigin="anonymous"></script>
@@ -212,15 +214,15 @@
             <div class="rows">
               <div class="row" style="grid-template-columns:1fr 1fr 1fr;align-items:end;padding-top:0">
                 <div>
-                  <label for="company">회사명</label>
+                  <label for="company">회사명 <span style="color:#fca5a5">*</span></label>
                   <input id="company" placeholder="예: ㈜홍길동" />
                 </div>
                 <div>
-                  <label for="contact">담당자명</label>
+                  <label for="contact">담당자명 <span style="color:#fca5a5">*</span></label>
                   <input id="contact" placeholder="예: 홍길동" />
                 </div>
                 <div>
-                  <label for="email">이메일</label>
+                  <label for="email">이메일 <span style="color:#fca5a5">*</span></label>
                   <input id="email" placeholder="예: hr@company.com" />
                 </div>
               </div>
@@ -315,7 +317,7 @@
                 </div>
 
                 <div class="row" style="grid-template-columns:1fr 160px 160px">
-                  <div class="desc muted">※ Tier 설명은 견적서에 포함되지 않습니다.</div>
+                  <div class="desc muted">※ Tier 설명은 PDF의 참고사항에 표시됩니다.</div>
                   <div>
                     <label>13억명 후보자 AI평가 및 추천</label>
                     <input id="aiCapacity" readonly />
@@ -502,6 +504,22 @@
       return d.toISOString().slice(0,10);
     };
 
+    // ✅ 필수 입력 체크 (회사명/담당자/이메일)
+    function validateRequired(){
+      const company = ($('company')?.value || '').trim();
+      const contact = ($('contact')?.value || '').trim();
+      const email = ($('email')?.value || '').trim();
+
+      if (!company){ toast('회사명을 입력해주세요.'); $('company')?.focus(); return false; }
+      if (!contact){ toast('담당자명을 입력해주세요.'); $('contact')?.focus(); return false; }
+      if (!email){ toast('이메일을 입력해주세요.'); $('email')?.focus(); return false; }
+
+      // 간단 이메일 형식 체크(너무 엄격하지 않게)
+      const ok = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+      if (!ok){ toast('이메일 형식을 확인해주세요.'); $('email')?.focus(); return false; }
+      return true;
+    }
+
     function getProductSignature(){
       const sigObj = {
         qtyRecruiter: $('qtyRecruiter')?.value || '0',
@@ -605,7 +623,6 @@
 
       const rows = buildRows({ aiTier, qtyRecruiter, qtyJob, qtyLTI, lifeInclude, amtRecruiter, amtAI, amtJob, amtLTI, total });
 
-      // ✅ 선택 항목: 제품명 나열(글자 작게)
       if (!rows.length) {
         $('items').textContent = '-';
       } else {
@@ -616,9 +633,6 @@
         });
         $('items').textContent = names.join(', ');
       }
-
-      const minNotice = document.getElementById('minNotice');
-      if (minNotice) minNotice.style.display = (total > 0 && total < 10000) ? 'block' : 'none';
 
       const tb = $('tbody');
       tb.innerHTML = rows.length ? rows.map(r => {
@@ -679,7 +693,6 @@
       };
     }
 
-    // ===== 파일명: Linkedin Korea Partner_YYYYMMDD_HHMM =====
     function fileStamp(){
       const d = new Date();
       const y = d.getFullYear();
@@ -690,14 +703,13 @@
       return `${y}${m}${day}_${hh}${mm}`;
     }
 
-    // ✅ Tier 참고사항 문구: 선택된 tier일 때만 수치 포함
     function tierNoteHtml(aiTier){
       if (!aiTier || aiTier === 'none') return '';
       const cap = PRICES.ai[aiTier]?.cap || 0;
       const app = PRICES.ai[aiTier]?.app || 0;
       const tierLabel = `Tier ${aiTier.slice(1)}`;
       return `
-        <div style="margin-top:10px;font-size:10.5px;color:#000;line-height:1.55;">
+        <div style="margin-top:14px;font-size:10.5px;color:#000;line-height:1.6;">
           <b>참고사항</b><br/>
           • 선택한 ${tierLabel} 기준: 13억명 후보자 AI평가 및 추천 <b>${nfmt(cap)}명</b><br/>
           • 채용공고 지원자 중 AI평가 <b>${nfmt(app)}명</b>
@@ -705,11 +717,15 @@
       `;
     }
 
-    // ===== ✅ PDF: 캡처 렌더링(표 가독성 강화 + 정보 테이블화) =====
+    /* ✅ PDF 표 스타일: 바깥 테두리 두껍게, 내부선 얇게 */
+    function thickOuterTable(html){
+      return html;
+    }
+
     function renderCaptureHtml({ total, rows, quoteNo, aiTier }){
-      const company = $('company').value || '';
-      const contact = $('contact').value || '';
-      const email = $('email').value || '';
+      const company = ($('company').value || '').trim();
+      const contact = ($('contact').value || '').trim();
+      const email = ($('email').value || '').trim();
       const quoteDate = $('quoteDate').value || new Date().toISOString().slice(0,10);
       const validUntil = $('validUntil').value || addDaysISO(quoteDate, 20);
 
@@ -719,62 +735,73 @@
         const amt = (r.amount == null) ? '문의' : money(r.amount);
         return `
           <tr>
-            <td style="border:1px solid #000;padding:7px;font-size:10.5px;font-weight:700;color:#000;vertical-align:top;">${r.name}</td>
-            <td style="border:1px solid #000;padding:7px;font-size:10.5px;color:#000;text-align:right;vertical-align:top;">${unit}</td>
-            <td style="border:1px solid #000;padding:7px;font-size:10.5px;color:#000;text-align:right;vertical-align:top;">${qty}</td>
-            <td style="border:1px solid #000;padding:7px;font-size:10.5px;font-weight:900;color:#000;text-align:right;vertical-align:top;">${amt}</td>
+            <td style="padding:7px;font-size:10.2px;font-weight:700;color:#000;border-top:1px solid #000;border-bottom:1px solid #000;">${r.name}</td>
+            <td style="padding:7px;font-size:10.2px;color:#000;text-align:right;border-top:1px solid #000;border-bottom:1px solid #000;">${unit}</td>
+            <td style="padding:7px;font-size:10.2px;color:#000;text-align:right;border-top:1px solid #000;border-bottom:1px solid #000;">${qty}</td>
+            <td style="padding:7px;font-size:10.2px;font-weight:900;color:#000;text-align:right;border-top:1px solid #000;border-bottom:1px solid #000;">${amt}</td>
           </tr>
         `;
       }).join('');
 
       return `
-        <div style="font-family:Apple SD Gothic Neo, Noto Sans KR, sans-serif; color:#000;">
-          <div style="font-size:30px;font-weight:900;margin:0 0 12px;letter-spacing:-.2px;">
+        <div style="color:#000;">
+          <!-- 제목 -->
+          <div style="font-size:30px;font-weight:900;margin:0 0 18px;letter-spacing:-.2px;">
             Linkedin Solution 견적서
           </div>
 
-          <!-- ✅ 상단 정보도 표로 정리 -->
-          <table style="width:100%;border-collapse:collapse;table-layout:fixed;margin-bottom:10px;">
-            <tbody>
-              <tr>
-                <th style="border:1px solid #000;background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;width:18%;">견적번호</th>
-                <td style="border:1px solid #000;padding:8px;font-size:11px;color:#000;width:32%;">${quoteNo}</td>
-                <th style="border:1px solid #000;background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;width:18%;">견적일</th>
-                <td style="border:1px solid #000;padding:8px;font-size:11px;color:#000;width:32%;">${quoteDate}</td>
-              </tr>
-              <tr>
-                <th style="border:1px solid #000;background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;">유효기간</th>
-                <td style="border:1px solid #000;padding:8px;font-size:11px;color:#000;">${validUntil} (20일)</td>
-                <th style="border:1px solid #000;background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;">VAT</th>
-                <td style="border:1px solid #000;padding:8px;font-size:11px;color:#000;">해당없음</td>
-              </tr>
-              <tr>
-                <th style="border:1px solid #000;background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;">회사명</th>
-                <td style="border:1px solid #000;padding:8px;font-size:11px;color:#000;">${company || '-'}</td>
-                <th style="border:1px solid #000;background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;">담당자</th>
-                <td style="border:1px solid #000;padding:8px;font-size:11px;color:#000;">${contact || '-'}</td>
-              </tr>
-              <tr>
-                <th style="border:1px solid #000;background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;">이메일</th>
-                <td colspan="3" style="border:1px solid #000;padding:8px;font-size:11px;color:#000;">${email || '-'}</td>
-              </tr>
-            </tbody>
-          </table>
+          <!-- ✅ 제목과 표 간격 -->
+          <div style="height:10px"></div>
 
-          <!-- ✅ 견적 내역 -->
-          <table style="width:100%;border-collapse:collapse;table-layout:fixed;">
-            <thead>
-              <tr>
-                <th style="border:1px solid #000;padding:8px;background:#e5e7eb;width:45%;text-align:center;font-size:11px;font-weight:900;color:#000;">항목</th>
-                <th style="border:1px solid #000;padding:8px;background:#e5e7eb;width:18%;text-align:center;font-size:11px;font-weight:900;color:#000;">단가(USD)</th>
-                <th style="border:1px solid #000;padding:8px;background:#e5e7eb;width:10%;text-align:center;font-size:11px;font-weight:900;color:#000;">수량</th>
-                <th style="border:1px solid #000;padding:8px;background:#e5e7eb;width:27%;text-align:center;font-size:11px;font-weight:900;color:#000;">금액(USD)</th>
-              </tr>
-            </thead>
-            <tbody>
-              ${bodyRows || `<tr><td colspan="4" style="border:1px solid #000;padding:8px;font-size:11px;color:#000;">선택된 항목이 없습니다.</td></tr>`}
-            </tbody>
-          </table>
+          <!-- 상단 정보 표(바깥 굵게, 내부 얇게) -->
+          <div style="border:2px solid #000;">
+            <table style="width:100%;border-collapse:collapse;table-layout:fixed;">
+              <tbody>
+                <tr>
+                  <th style="background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;width:18%;border-right:1px solid #000;border-bottom:1px solid #000;">견적번호</th>
+                  <td style="padding:8px;font-size:11px;color:#000;width:32%;border-right:1px solid #000;border-bottom:1px solid #000;">${quoteNo}</td>
+                  <th style="background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;width:18%;border-right:1px solid #000;border-bottom:1px solid #000;">견적일</th>
+                  <td style="padding:8px;font-size:11px;color:#000;width:32%;border-bottom:1px solid #000;">${quoteDate}</td>
+                </tr>
+                <tr>
+                  <th style="background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;border-right:1px solid #000;border-bottom:1px solid #000;">유효기간</th>
+                  <td style="padding:8px;font-size:11px;color:#000;border-right:1px solid #000;border-bottom:1px solid #000;">${validUntil} (20일)</td>
+                  <th style="background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;border-right:1px solid #000;border-bottom:1px solid #000;">VAT</th>
+                  <td style="padding:8px;font-size:11px;color:#000;border-bottom:1px solid #000;">해당없음</td>
+                </tr>
+                <tr>
+                  <th style="background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;border-right:1px solid #000;border-bottom:1px solid #000;">회사명</th>
+                  <td style="padding:8px;font-size:11px;color:#000;border-right:1px solid #000;border-bottom:1px solid #000;">${company || '-'}</td>
+                  <th style="background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;border-right:1px solid #000;border-bottom:1px solid #000;">담당자</th>
+                  <td style="padding:8px;font-size:11px;color:#000;border-bottom:1px solid #000;">${contact || '-'}</td>
+                </tr>
+                <tr>
+                  <th style="background:#f3f4f6;padding:8px;font-size:11px;font-weight:900;color:#000;text-align:center;border-right:1px solid #000;">이메일</th>
+                  <td colspan="3" style="padding:8px;font-size:11px;color:#000;">${email || '-'}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <!-- ✅ 상단표와 항목표 간격 -->
+          <div style="height:16px"></div>
+
+          <!-- 항목 표(바깥 굵게, 내부 얇게 / 내부는 세로선 최소화: 가로선 중심) -->
+          <div style="border:2px solid #000;">
+            <table style="width:100%;border-collapse:collapse;table-layout:fixed;">
+              <thead>
+                <tr>
+                  <th style="padding:8px;background:#e5e7eb;width:45%;text-align:center;font-size:11px;font-weight:900;color:#000;border-bottom:1px solid #000;">항목</th>
+                  <th style="padding:8px;background:#e5e7eb;width:18%;text-align:center;font-size:11px;font-weight:900;color:#000;border-bottom:1px solid #000;">단가(USD)</th>
+                  <th style="padding:8px;background:#e5e7eb;width:10%;text-align:center;font-size:11px;font-weight:900;color:#000;border-bottom:1px solid #000;">수량</th>
+                  <th style="padding:8px;background:#e5e7eb;width:27%;text-align:center;font-size:11px;font-weight:900;color:#000;border-bottom:1px solid #000;">금액(USD)</th>
+                </tr>
+              </thead>
+              <tbody>
+                ${bodyRows || `<tr><td colspan="4" style="padding:8px;font-size:11px;color:#000;border-top:1px solid #000;">선택된 항목이 없습니다.</td></tr>`}
+              </tbody>
+            </table>
+          </div>
 
           <div style="margin-top:10px;font-size:18px;font-weight:900;text-align:right;color:#000;">
             Total (USD) : ${money(total)}
@@ -782,8 +809,10 @@
 
           ${tierNoteHtml(aiTier)}
 
-          <!-- ✅ 하단 영역(간격 포함) -->
-          <div style="margin-top:52px;text-align:center;">
+          <!-- ✅ 하단 내용: A4 맨 아래쪽으로 밀기 -->
+          <div style="height:90px"></div>
+
+          <div style="text-align:center;">
             <div style="font-size:18px;font-weight:900;color:#000;">Linkedin Korea Partner</div>
             <div style="margin-top:6px;font-size:11px;color:#000;">02-6405-4446 / help@hrpoint.co.kr</div>
 
@@ -846,12 +875,14 @@
     }
 
     async function onDownloadPdf(){
+      if (!validateRequired()) return;      // ✅ 필수값 없으면 다운로드 차단
       const ok = await logOnceForCurrentQuote();
       if (!ok) { toast('선택된 항목이 없습니다.'); return; }
       await makePdfByCapture();
     }
 
     async function onCopyLink(){
+      // 링크복사는 필수값 강제하지 않음(원하면 강제 가능)
       const ok = await logOnceForCurrentQuote();
       if (!ok) { toast('선택된 항목이 없습니다.'); return; }
 
